# Course_work-_Healthy_habits

./: .env.sample  Dockerfile  README.md  docker-compose.yml  habits_data.json  pyproject.toml  users_data.json
config/: settings.py  urls.py
habits/: admin.py  models.py  paginations.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_remove_habits_sign_of_pleasant_habit_and_more.py  0003_rename_related_habits_habits_related_habit.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
